# companio

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
companio-backend/: .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  railway.json  requirements.txt
companio-backend/alembic/: env.py
companio-backend/alembic/versions/: 974e9a273298_create_first_table.py  bc084688fbfd_create_notes_table.py
companio-backend/app/: main.py  models.py
companio-backend/app/api/: api.py  deps.py
companio-backend/app/api/endpoints/: auth.py  lists.py  old_routes.py  test.py
companio-backend/app/api/routers/: users.py
companio-backend/app/core/: config.py
companio-backend/app/schemas/: requests.py  responses.py
companio-backend/versions/: 2023020440_init_user_model_07c71f4389b6.py
companio-devops/: deploy.sh
companio-frontend/: package-lock.json
companio-test/: config.py
companio_backend/: .pre-commit-config.yaml  old_docker_file  pyproject.toml  railway.json
companio_backend/app/: models.py
companio_backend/app/api/endpoints/: lists.py
companio_devops/: .gitignore  vars.example.sh
companio_frontend/: package.json
companio_frontend_mvp/: components.py  config.py  main.py  requirements.txt
companio_test/: test_notes.py  test_users.py
