[tool.poetry]
name = "companio-backend"
version = "0.1.0"
description = ""
authors = ["Leonardo Vida <leonardo.vida@beerwulf.com>"]
readme = "README.md"
packages = [{include = "companio_backend"}]

[tool.poetry.dependencies]
python = "3.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
