[tool.poetry]
name = "companio-backend"
version = "0.1.0"
description = ""
authors = ["Leonardo Vida <lleonardovida@gmail.com>"]
readme = "README.md"
packages = [{include = "companio_backend"}]

[tool.poetry.dependencies]
python = "3.10.9"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
gunicorn = "^20.1.0"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
