[tool.poetry]
name = "companio-backend"
version = "0.1.0"
description = "Companio backend"
authors = ["Leonardo Vida <lleonardovida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
gunicorn = "^20.1.0"
alembic = "^1.10.3"
autoflake = "^2.0.1"
black = "^23.1.0"
coverage = "^7.1.0"
flake8 = "^6.0.0"
httpx = "^0.23.3"
isort = "^5.12.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pre-commit = "^3.0.4"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.4"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.1"
python-multipart = ">=0.0.5,<0.0.6"
pyjwt = {extras = ["crypto"], version = "^2.6.0"}
greenlet = "^2.0.2"
psycopg = "^3.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = []
markers = ["pytest.mark.asyncio"]
minversion = "6.0"
testpaths = ["app/tests"]

[tool.isort]
profile = "black"

